profile fixes on mobile device2

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,7 +22,7 @@ body, html { overflow-x:hidden; }
 }
 
 .phonea a {
-  background-color:#fff;
+  background-color:#fff !important;
 }
 
 .modal-style-new {
@@ -245,6 +245,7 @@ nav a img{
     top: 0px;
     height: 46px;
     padding: 0;
+      width: 81px;
 }
 
 .back-button a {
